2007-01-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* NEWS: Release 1.0.5

2007-01-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* configure.ac: Synchronized with Autoconf 2.60.
	Now 2.60 is the minimum required version.
	Changed docdir to pkgdocdir

2007-01-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (checkdevtype):
	IOS XR support

2007-01-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS.pm (checkdevtype):
	New discovery parameter: CiscoIOS::enable-vlan-interfaces
	(discover): added Cisco BGP statistics

2006-12-22  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/JunOS.pm:
	New discovery module for Juniper 

2006-12-21  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm (discover):
	New discovery parameter: CiscoIOS_MacAccounting::tokenset-members

2006-12-05  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm (discover):
	New discovery parameter:
	RFC2863_IF_MIB::exclude-down-interfaces

	* bin/configinfo.in: Added the tree compilation timestamp

2006-12-03  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm:
	SNMP mapping lookups are now asynchronous.
	PDUs are rescheduled with delays
	Not compatible with old cbQos plugin, needs tp-cisco-cbqos-1.4d

2006-11-26  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/Collector/SNMP.pm: new SNMP parameters:
	  snmp-localaddr and snmp-localport


2006-11-23  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/CiscoIOS_MacAccounting.pm:
	New discovery parameter:
	CiscoIOS_MacAccounting::external-serviceid

2006-10-14  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>

	* perllib/Torrus/DevDiscover/RFC2863_IF_MIB.pm:
	new discovery parameters: