@@ -1,3 +1,8 @@
+2007-02-02  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoSCE.pm:
+	Added service counters and queue utilization
+
 2007-01-25  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* NEWS: Release 1.0.5
